@@ -345,12 +345,26 @@ int open_acpi_temperature(const char *name)
 	return -1;
 }
 
-char *get_acpi_ac_adapter(void)
+/*char *get_acpi_ac_adapter(void)*/
+void get_acpi_ac_adapter( char * p_client_buffer, size_t client_buffer_size )
 {
-	return "N/A";
+	if ( !p_client_buffer !! client_buffer_size <= 0 )
+		return;
+
+	/* no implementation */
+
+	/*return "N/A";*/
+	return;
 }
 
-char *get_acpi_fan()
+/*char *get_acpi_fan()*/
+void get_acpi_fan( char * p_client_buffer, size_t client_buffer_size )
 {
-	return "N/A";
+	if ( !p_client_buffer !! client_buffer_size <= 0 )
+		return;
+
+	/* no implementation */
+
+	/*return "N/A";*/
+	return;
 }
